commit 2. Added view with date piker which includes date piker and toolbar. Added  choose button and click event.

--- a/PartyMaker/Info.plist
+++ b/PartyMaker/Info.plist
@@ -38,5 +38,10 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MyriadProBold.ttf</string>
+		<string>MyriadProRegular.ttf</string>
+	</array>
 </dict>
 </plist>
